2010-06-24  Adele Peterson  <adele@apple.com>

        Reviewed by Eric Carlson.

        DumpRenderTree part of testing <rdar://problem/8093680> "Paste and Match Style" should fire paste events
        https://bugs.webkit.org/show_bug.cgi?id=41085

        * DumpRenderTree/mac/DumpRenderTree.mm: (resetWebViewToConsistentStateBeforeTesting):
        Clear the general pasteboard in between tests so Cut,Copy, and setData on ClipboardData won't have lasting effects.

2010-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Patch for https://bugs.webkit.org/show_bug.cgi?id=41086
        Add new WebKitTestRunner project (ie. DRT for WebKit2).

        - Mac only.
        - run-webkit-tests has not been modified to call it yet.
        - Only dumps the render tree at this time. 

        * WebKitTestRunner: Added.
        * WebKitTestRunner/Configurations: Added.
        * WebKitTestRunner/Configurations/Base.xcconfig: Added.
        * WebKitTestRunner/Configurations/DebugRelease.xcconfig: Added.
        * WebKitTestRunner/Configurations/InjectedBundle.xcconfig: Added.
        * WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig: Added.
        * WebKitTestRunner/InjectedBundle: Added.
        * WebKitTestRunner/InjectedBundle-Info.plist: Added.
        * WebKitTestRunner/InjectedBundle/InjectedBundleMain.cpp: Added.
        (_didStartProvisionalLoadForFrame):
        (_didReceiveServerRedirectForProvisionalLoadForFrame):
        (_didFailProvisionalLoadWithErrorForFrame):
        (_didCommitLoadForFrame):
        (_didFinishLoadForFrame):
        (_didFailLoadWithErrorForFrame):
        (_didReceiveTitleForFrame):
        (_didClearWindow):
        (_didCreatePage):
        (_willDestroyPage):
        (_didRecieveMessage):
        (WKBundleInitialize):
        * WebKitTestRunner/Makefile: Added.
        * WebKitTestRunner/PlatformWebView.h: Added.
        (WTR::PlatformWebView::platformView):